internal/generator/output/interop_array.h

typedef struct {
    void* data;
    int length;
    int elementSize;
} GoArray;
typedef struct {
    int v0;
    uint64_t v1;
} Inventory_Inventory_AddItem_Result;
typedef struct {
    int v0;
    bool v1;
} Inventory_Inventory_First_Result;
typedef struct {
    int v0;
    bool v1;
} Inventory_Inventory_FirstEmpty_Result;
typedef struct {
    int v0;
    bool v1;
} Inventory_Inventory_FirstFunc_Result;
typedef struct {
    uint64_t v0;
    uint64_t v1;
} Inventory_Inventory_Item_Result;
typedef struct {
    uint64_t v0;
    uint64_t v1;
} Item_Stack_AddStack_Result;
typedef struct {
    uint64_t v0;
    bool v1;
} Item_Stack_Enchantment_Result;
typedef struct {
    uint64_t v0;
    bool v1;
} Item_Stack_Value_Result;
uint64_t Inventory_Armour_Leggings(uint64_t self);
void Inventory_Armour_Set(uint64_t self, uint64_t p1, uint64_t p2, uint64_t p3, uint64_t p4);
void Inventory_Armour_SetBoots(uint64_t self, uint64_t p1);
void Inventory_Armour_SetChestplate(uint64_t self, uint64_t p1);
void Inventory_Armour_SetHelmet(uint64_t self, uint64_t p1);
void Inventory_Armour_SetLeggings(uint64_t self, uint64_t p1);
GoArray Inventory_Armour_Slots(uint64_t self);
char* Inventory_Armour_String(uint64_t self);
double Inventory_Armour_ThornsDamage(uint64_t self, uint64_t p1);
uint64_t Inventory_Inventory_Ctor(void);
Inventory_Inventory_AddItem_Result Inventory_Inventory_AddItem(uint64_t self, uint64_t p1);
GoArray Inventory_Inventory_Clear(uint64_t self);
uint64_t Inventory_Inventory_Clone(uint64_t self, uint64_t p1);
uint64_t Inventory_Inventory_Close(uint64_t self);
bool Inventory_Inventory_ContainsItem(uint64_t self, uint64_t p1);
bool Inventory_Inventory_ContainsItemFunc(uint64_t self, int p1, uint64_t p2);
bool Inventory_Inventory_Empty(uint64_t self);
Inventory_Inventory_First_Result Inventory_Inventory_First(uint64_t self, uint64_t p1);
Inventory_Inventory_FirstEmpty_Result Inventory_Inventory_FirstEmpty(uint64_t self);
Inventory_Inventory_FirstFunc_Result Inventory_Inventory_FirstFunc(uint64_t self, uint64_t p1);
void Inventory_Inventory_Handle(uint64_t self, uint64_t p1);
uint64_t Inventory_Inventory_Handler(uint64_t self);
Inventory_Inventory_Item_Result Inventory_Inventory_Item(uint64_t self, int p1);
GoArray Inventory_Inventory_Items(uint64_t self);
uint64_t Inventory_Inventory_Merge(uint64_t self, uint64_t p1, uint64_t p2);
uint64_t Inventory_Inventory_RemoveItem(uint64_t self, uint64_t p1);
uint64_t Inventory_Inventory_RemoveItemFunc(uint64_t self, int p1, uint64_t p2);
uint64_t Inventory_Inventory_SetItem(uint64_t self, int p1, uint64_t p2);
int Inventory_Inventory_Size(uint64_t self);
void Inventory_Inventory_SlotFunc(uint64_t self, uint64_t p1);
void Inventory_Inventory_SlotValidatorFunc(uint64_t self, uint64_t p1);
GoArray Inventory_Inventory_Slots(uint64_t self);
char* Inventory_Inventory_String(uint64_t self);
uint64_t Inventory_Inventory_Swap(uint64_t self, int p1, int p2);
uint64_t Item_Enchantment_Ctor(void);
int Item_Enchantment_Level(uint64_t self);
uint64_t Item_Enchantment_Type(uint64_t self);
uint64_t Item_Stack_Ctor(void);
Item_Stack_AddStack_Result Item_Stack_AddStack(uint64_t self, uint64_t p1);
int Item_Stack_AnvilCost(uint64_t self);
uint64_t Item_Stack_AsBreakable(uint64_t self);
uint64_t Item_Stack_AsUnbreakable(uint64_t self);
double Item_Stack_AttackDamage(uint64_t self);
bool Item_Stack_Comparable(uint64_t self, uint64_t p1);
int Item_Stack_Count(uint64_t self);
char* Item_Stack_CustomName(uint64_t self);
uint64_t Item_Stack_Damage(uint64_t self, int p1);
int Item_Stack_Durability(uint64_t self);
bool Item_Stack_Empty(uint64_t self);
Item_Stack_Enchantment_Result Item_Stack_Enchantment(uint64_t self, uint64_t p1);
GoArray Item_Stack_Enchantments(uint64_t self);
bool Item_Stack_Equal(uint64_t self, uint64_t p1);
uint64_t Item_Stack_Grow(uint64_t self, int p1);
uint64_t Item_Stack_Item(uint64_t self);
GoArray Item_Stack_Lore(uint64_t self);
int Item_Stack_MaxCount(uint64_t self);
int Item_Stack_MaxDurability(uint64_t self);
char* Item_Stack_String(uint64_t self);
bool Item_Stack_Unbreakable(uint64_t self);
Item_Stack_Value_Result Item_Stack_Value(uint64_t self, char* p1);
uint64_t Item_Stack_Values(uint64_t self);
uint64_t Item_Stack_WithAnvilCost(uint64_t self, int p1);
uint64_t Item_Stack_WithCustomName(uint64_t self, uint64_t p1);
uint64_t Item_Stack_WithDurability(uint64_t self, int p1);
uint64_t Item_Stack_WithEnchantments(uint64_t self, uint64_t p1);
uint64_t Item_Stack_WithItem(uint64_t self, uint64_t p1);
uint64_t Item_Stack_WithLore(uint64_t self, uint64_t p1);
uint64_t Item_Stack_WithValue(uint64_t self, char* p1, uint64_t p2);
uint64_t Item_Stack_WithoutEnchantments(uint64_t self, uint64_t p1);
uint64_t Item_UseContext_Ctor(void);
void Item_UseContext_Consume(uint64_t self, uint64_t p1);
void Item_UseContext_DamageItem(uint64_t self, int p1);
void Item_UseContext_SubtractFromCount(uint64_t self, int p1);
uint64_t Language_Base_Ctor(void);
char* Language_Base_ISO3(uint64_t self);
bool Language_Base_IsPrivateUse(uint64_t self);
char* Language_Base_String(uint64_t self);
uint64_t Language_Extension_Ctor(void);